Bindings faits, premiers tests en mode graphique.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 *.pdf
 *.pro
 *.pro.user
+backup_calculator.zip
+RPN_Calculator.config
+RPN_Calculator.creator
+RPN_Calculator.files
+RPN_Calculator.include
